// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceDetails Offline Device Renders the component 1`] = `
<fragment-stub>
  <div class="d-flex pa-0 align-center">
    <h1>
      Device Details
    </h1>
  </div>
  <v-card-stub loaderheight="4" tag="div" class="mt-2">
    <v-toolbar-stub color="transparent" tag="header" extensionheight="48" flat="true" src="">
      <v-toolbar-title-stub tag="div">
        <v-tooltip-stub opendelay="0" closedelay="0" bottom="true" openonclick="true" openonhover="true" openonfocus="true" contentclass="" maxwidth="auto" nudgebottom="0" nudgeleft="0" nudgeright="0" nudgetop="0" nudgewidth="0" tag="span"> <span>active 2 years ago</span></v-tooltip-stub>
        39-5e-2a
      </v-toolbar-title-stub>
      <v-spacer-stub tag="div"></v-spacer-stub>
      <v-menu-stub opendelay="0" closedelay="0" openonclick="true" contentclass="" maxwidth="auto" nudgebottom="0" nudgeleft="0" nudgeright="0" nudgetop="0" nudgewidth="0" closeonclick="true" closeoncontentclick="true" maxheight="auto" offsety="true" origin="top left" transition="v-menu-transition">
        <v-card-stub loaderheight="4" tag="div">
          <v-list-item-stub activeclass="" tag="div">
            <devicerename-stub name="39-5e-2a" uid="a582b47a" data-test="deviceRename-component"></devicerename-stub>
          </v-list-item-stub>
          <v-list-item-stub activeclass="" tag="div">
            <tagformupdate-stub deviceuid="a582b47a" tagslist="device1,device2" data-test="tagFormUpdate-component"></tagformupdate-stub>
          </v-list-item-stub>
          <!---->
          <v-list-item-stub activeclass="" tag="div">
            <devicedelete-stub uid="a582b47a" redirect="true" data-test="deviceDelete-component"></devicedelete-stub>
          </v-list-item-stub>
        </v-card-stub>
      </v-menu-stub>
    </v-toolbar-stub>
    <v-divider-stub></v-divider-stub>
    <v-card-text-stub tag="div">
      <div class="mt-2">
        <div class="overline">
          UID
        </div>
        <div data-test="deviceUid-field">
          a582b47a
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          MAC
        </div> <code data-test="deviceMac-field">
          00:00:00
        </code>
      </div>
      <div class="mt-2">
        <div class="overline">
          Operating System
        </div>
        <div data-test="devicePrettyName-field">
          <deviceicon-stub iconname="arch"></deviceicon-stub>
          Linux
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          Tags
        </div>
        <v-chip-stub small="true" activeclass="" tag="span" active="true" closeicon="$delete" closelabel="$vuetify.close" filtericon="$complete" outlined="true" class="ml-1 mb-1">
          device1
        </v-chip-stub>
        <v-chip-stub small="true" activeclass="" tag="span" active="true" closeicon="$delete" closelabel="$vuetify.close" filtericon="$complete" outlined="true" class="ml-1 mb-1">
          device2
        </v-chip-stub>
      </div>
      <div class="mt-2">
        <div class="overline">
          Last Seen
        </div>
        <div data-test="deviceConvertDate-field">
          Wednesday, May 20th 2020, 6:58:53 pm
        </div>
      </div>
    </v-card-text-stub>
  </v-card-stub>
  <div class="text-center">
    <v-dialog-stub opendelay="0" closedelay="0" openonclick="true" contentclass="" origin="center center" persistent="true" retainfocus="true" transition="dialog-transition" width="500">
      <v-card-stub loaderheight="4" tag="div">
        <v-card-title-stub tag="div" primary-title="" class="headline primary">
          Device ID error
        </v-card-title-stub>
        <v-card-text-stub tag="div" class="mt-4 mb-3 pb-1">
          You tried to access a non-existing device ID.
        </v-card-text-stub>
        <v-card-actions-stub tag="div">
          <v-spacer-stub tag="div"></v-spacer-stub>
          <v-btn-stub color="primary" tag="button" activeclass="" text="true" type="button">
            Go back to devices
          </v-btn-stub>
        </v-card-actions-stub>
      </v-card-stub>
    </v-dialog-stub>
  </div>
</fragment-stub>
`;

exports[`DeviceDetails Online Device Renders the component 1`] = `
<fragment-stub>
  <div class="d-flex pa-0 align-center">
    <h1>
      Device Details
    </h1>
  </div>
  <v-card-stub loaderheight="4" tag="div" class="mt-2">
    <v-toolbar-stub color="transparent" tag="header" extensionheight="48" flat="true" src="">
      <v-toolbar-title-stub tag="div">
        <v-icon-stub color="success">
          check_circle
        </v-icon-stub>
        39-5e-2a
      </v-toolbar-title-stub>
      <v-spacer-stub tag="div"></v-spacer-stub>
      <v-menu-stub opendelay="0" closedelay="0" openonclick="true" contentclass="" maxwidth="auto" nudgebottom="0" nudgeleft="0" nudgeright="0" nudgetop="0" nudgewidth="0" closeonclick="true" closeoncontentclick="true" maxheight="auto" offsety="true" origin="top left" transition="v-menu-transition">
        <v-card-stub loaderheight="4" tag="div">
          <v-list-item-stub activeclass="" tag="div">
            <devicerename-stub name="39-5e-2a" uid="a582b47a" data-test="deviceRename-component"></devicerename-stub>
          </v-list-item-stub>
          <v-list-item-stub activeclass="" tag="div">
            <tagformupdate-stub deviceuid="a582b47a" tagslist="device1,device2" data-test="tagFormUpdate-component"></tagformupdate-stub>
          </v-list-item-stub>
          <v-list-item-stub activeclass="" tag="div">
            <terminaldialog-stub uid="a582b47a" data-test="terminalDialog-component"></terminaldialog-stub>
          </v-list-item-stub>
          <v-list-item-stub activeclass="" tag="div">
            <devicedelete-stub uid="a582b47a" redirect="true" data-test="deviceDelete-component"></devicedelete-stub>
          </v-list-item-stub>
        </v-card-stub>
      </v-menu-stub>
    </v-toolbar-stub>
    <v-divider-stub></v-divider-stub>
    <v-card-text-stub tag="div">
      <div class="mt-2">
        <div class="overline">
          UID
        </div>
        <div data-test="deviceUid-field">
          a582b47a
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          MAC
        </div> <code data-test="deviceMac-field">
          00:00:00
        </code>
      </div>
      <div class="mt-2">
        <div class="overline">
          Operating System
        </div>
        <div data-test="devicePrettyName-field">
          <deviceicon-stub iconname="arch"></deviceicon-stub>
          Linux
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          Tags
        </div>
        <v-chip-stub small="true" activeclass="" tag="span" active="true" closeicon="$delete" closelabel="$vuetify.close" filtericon="$complete" outlined="true" class="ml-1 mb-1">
          device1
        </v-chip-stub>
        <v-chip-stub small="true" activeclass="" tag="span" active="true" closeicon="$delete" closelabel="$vuetify.close" filtericon="$complete" outlined="true" class="ml-1 mb-1">
          device2
        </v-chip-stub>
      </div>
      <div class="mt-2">
        <div class="overline">
          Last Seen
        </div>
        <div data-test="deviceConvertDate-field">
          Wednesday, May 20th 2020, 6:58:53 pm
        </div>
      </div>
    </v-card-text-stub>
  </v-card-stub>
  <div class="text-center">
    <v-dialog-stub opendelay="0" closedelay="0" openonclick="true" contentclass="" origin="center center" persistent="true" retainfocus="true" transition="dialog-transition" width="500">
      <v-card-stub loaderheight="4" tag="div">
        <v-card-title-stub tag="div" primary-title="" class="headline primary">
          Device ID error
        </v-card-title-stub>
        <v-card-text-stub tag="div" class="mt-4 mb-3 pb-1">
          You tried to access a non-existing device ID.
        </v-card-text-stub>
        <v-card-actions-stub tag="div">
          <v-spacer-stub tag="div"></v-spacer-stub>
          <v-btn-stub color="primary" tag="button" activeclass="" text="true" type="button">
            Go back to devices
          </v-btn-stub>
        </v-card-actions-stub>
      </v-card-stub>
    </v-dialog-stub>
  </div>
</fragment-stub>
`;
